--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 <div class="main-panel">
     
     <div class="left-panel image-container-wall">
-        <img class="image-wall" src="{{url_for('static', filename='wall.png')}}">
+        <img class="image-wall" src="{{url_for('static', filename='wall-engine.png')}}">
     </div>
     
     
